# acoustic-demos

./: .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
data/: bridge.1.mesh  bridge.stl
include/acoustics/: eigen_frequency.h
src/: CMakeLists.txt  eigen_frequency.cpp
